--- a/src/Components/About/Carousel/Skills.css
+++ b/src/Components/About/Carousel/Skills.css
@@ -6,11 +6,11 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 8px;
+    gap: .5rem;
     cursor: pointer;
 
     img {
-        width: 80px;
+        width: 4rem;
         transition: .5s;
 
         &:hover{
@@ -20,7 +20,7 @@
 
     p {
         font-weight: 300;
-        font-size: 18px;
+        font-size: 1rem;
    }
 }
 
