--- a/src/Components/Hero/Hero.css
+++ b/src/Components/Hero/Hero.css
@@ -2,21 +2,20 @@
     display: flex;
     align-items: center;
     flex-direction: column;
-    margin-top: 144px;
-    margin-bottom: 144px;
+    margin-top: 1.5rem;
 
     img {
-        width: 500px;
-        height: 500px;
+        width: 25rem;
+        height: 25rem;
         border-radius: 50%;
         object-fit: cover;
         object-position: 0% 40%;
     }
 
     h1 {
-        margin-top: 5rem;
+        margin-top: 2.5rem;
         text-align: center;
-        font-size: 70px;
+        font-size: 4rem;
 
         span {
             background: var(--bg-red-gradient);
@@ -30,19 +29,23 @@
     p {
         width: 70%;
         text-align: center;
-        font-size: 24px;
-        line-height: 40px;
-        margin-top: 3rem;
+        font-size: 1.5rem;
+        line-height: 2rem;
+        margin-top: 2rem;
     }
 }
 
 @media(max-width:1200px){
     .hero {
-        margin-top: 6rem;
-        margin-bottom: 6rem; 
+        margin-top:6rem;
+
+        h1 {
+            font-size: 3.5rem;
+            padding: 0 2rem;
+        }
 
         p {
-            width: 100%;
+            font-size: 1.2rem;
         }
     }
 
@@ -50,8 +53,8 @@
 
 @media(max-width:750px){
     .hero {
-        margin-top: 4rem;
-        margin-bottom: 4rem;
+        margin-top: 3rem;
+        padding: 2rem;
 
         img{
             width: 20rem;
@@ -59,17 +62,15 @@
         }
 
         h1 {
-            width: 90%;
             margin-top: 1.5rem;
-            font-size: 2.5rem;
+            font-size: 2.3rem;
         }
 
         p {
             width: 90%;
-            font-size: 1.5rem;
+            font-size: 1.2rem;
             line-height: normal;
             margin-top: 1.5rem;
-            padding: 2rem;
         }
     }
 }
