--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -1,12 +1,11 @@
 .navbar {
     display: flex;
     align-items: center;
-    justify-content: space-between;
-    margin-top: 24px ;
+    justify-content: space-around;
+    padding: 2rem;
 
     img {
-        height: 80px;
-        filter: drop-shadow(1px 1px 0px #783030);
+        height: 56px;
     }
 }
 
@@ -14,24 +13,8 @@
     display: flex;
     align-items: center;
     gap: 60px;
-    font-size: 20px;
+    font-size: 1rem;
     cursor: pointer;
-}
-
-.nav-connect {
-    padding: 20px 40px;
-    border-radius: 50px;
-    font-size: 22px;
-    background: var(--bg-red-gradient);
-    color: var(--off-white);
-    cursor: pointer;
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
-    transition: 0.5s;
-
-    &:hover {
-        outline: 2px solid var(--off-white);
-    }
-
 }
 
 .hover-animation {
@@ -78,25 +61,26 @@
     display: none;
   }
 
-  .top-0-link {
+  /* .top-0-link {
     img{
-      width: 3rem;
-      height: 3rem;
+      width: 2rem;
+      height: 2rem;
     }
   }
 
   .top-arrow {
-    display: block;
-    position: fixed;
+    display: inline-block;
+    position: absolute;
     bottom: 1rem;
     border: 1px solid var(--off-white);
     border-radius: 50%;
     padding: .5rem;
-  }
+  } */
 
   @media(max-width:1200px){
     
     .navbar{
+      position: absolute;
       margin: 20px 50px;
     }
 
@@ -155,7 +139,7 @@
   }
 
   @media(max-width:750px) {
-    .top-0-link {
-      display: none;
+    .navbar {
+      z-index: 1;
     }
   }
