--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 8rem;
+    padding-top: 4rem;
 }
 
 .about-title {
@@ -85,9 +85,11 @@
 }
 
 @media(max-width:1200px) {
+    
 
     .about {
         
+        padding-top: 0;
         margin-top: 8rem;
 
         h1 {
