--- a/src/Components/Hero/Hero.css
+++ b/src/Components/Hero/Hero.css
@@ -3,6 +3,7 @@
     align-items: center;
     flex-direction: column;
     margin-top: 1.5rem;
+    margin-bottom: 4rem;
 
     img {
         width: 25rem;
