--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-top: 4rem;
+    padding-top: 5rem;
 }
 
 .about-title {
@@ -164,7 +164,8 @@
     .about-pg {
 
         p {
-            padding: 1.4rem;
+            padding: 1rem;
+            font-size: 1rem;
         }
     }
 
